[gd_scene load_steps=4 format=3 uid="uid://blv5mps17kqeh"]

[ext_resource type="Script" uid="uid://bl4yfxc78vkt6" path="res://Scripts/trap_die.gd" id="1_h8yjx"]
[ext_resource type="AudioStream" uid="uid://dgju0lhc8jse0" path="res://assets/sounds/power_up.wav" id="2_eag5s"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_7gmq1"]

[node name="TrapDie" type="Area2D"]
collision_mask = 2
script = ExtResource("1_h8yjx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("WorldBoundaryShape2D_7gmq1")

[node name="Timer" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="DieSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_eag5s")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
